--- a/pom.xml
+++ b/pom.xml
@@ -120,8 +120,8 @@
             <version>2.1</version>
         </dependency>
         <dependency>
-            <groupId>net.sf</groupId>
-            <artifactId>json</artifactId>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
             <version>2.3</version>
             <classifier>jdk15</classifier>
         </dependency>
