--- a/ArtistServer/pom.xml
+++ b/ArtistServer/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>metrics-servlets</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.7.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
