增加渠道统计、版本统计

--- a/ArtistCms/pom.xml
+++ b/ArtistCms/pom.xml
@@ -14,7 +14,16 @@
         <finalName>cms</finalName>
     </properties>
     <dependencies>
-
+        <dependency>
+            <groupId>org.quartz-scheduler</groupId>
+            <artifactId>quartz</artifactId>
+            <version>1.7.2</version>
+        </dependency>
+        <dependency>
+            <groupId>jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.0.13</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
