--- a/pom.xml
+++ b/pom.xml
@@ -493,6 +493,11 @@
             <artifactId>solr-core</artifactId>
             <version>3.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>0.11.0</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${finalName}</finalName>
