--- a/pom.xml
+++ b/pom.xml
@@ -30,14 +30,14 @@
         <repository>
             <id>artist</id>
             <name>Artist Repository</name>
-            <url>https://repository.jboss.org/nexus/content/repositories/releases</url>
+            <url>http://202.43.152.168/nexus/content/repositories/public/</url>
         </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>artist</id>
             <name>Artist Repository</name>
-            <url>https://repository.jboss.org/nexus/content/repositories/releases</url>
+            <url>http://202.43.152.168/nexus/content/repositories/public/</url>
         </pluginRepository>
     </pluginRepositories>
     <dependencies>
